=== 2.5.1 / 2019-06-03

* 1 minor enhancement:

  * Added full rdoc an re-bootstrapped.

* 1 bug fix:

  * Fixed a deprecation warning in ruby 2.6+.

=== 2.5.0 / 2016-11-30

* 5 minor enhancements:

  * Added #location to generated template, provides file:line:column per options.
  * Added LexerError and made ScanError subclass it.
  * Added column option.
  * Errors try to provide location now.
  * Re-bootstrapped.

* 2 bug fixes:

  * Fixed some whitespace generation when using :column.
  * Fixed wiring on column. (steakknife)

=== 2.4.1 / 2016-01-21

* 1 minor enhancement:

  * Use `skip` and `match?` instead of `scan` and `check`. Better on GC. (presidentbeef)

=== 2.4.0 / 2014-08-29

* 1 minor enhancement:

  * Added column option & accessor.

* 1 bug fix:

  * lineno shouldn't be visible at all if the option isn't on.

=== 2.3.2 / 2014-08-06

* 1 bug fix:

  * Increase lineno on nil token. (hashmal)

=== 2.3.1 / 2014-06-09

* 1 minor enhancement:

  * If there is an encoding comment on the first line, put it above generated headers.

=== 2.3.0 / 2014-05-16

* 4 minor enhancements:

  * Added == method to lexer.
  * Added pretty_print methods to lexer+rule+group.
  * Added structural test so I can later make optimization changes cleanly.
  * Refactored to (mostly) use an AST for code generation. Nukes 2 ERB templates.

=== 2.2.1 / 2014-04-02

* 1 bug fix:

  * Correct installation instructions in README. (luislavena)

=== 2.2.0 / 2014-03-14

* 3 minor enhancements:

  * Added debug rake task.
  * Added rule grouping. Naive benchmarking seems to show ~15% improvement in ruby_parser.
  * Refactored rule handling part of template to its own variable.

=== 2.1.0 / 2014-01-22

* 3 minor enhancements:

  * Added lineno and do_parse as options via grammar.
  * All options are now opt-in. You might want to add do_parse and lineno to your grammar.
  * New option lineno will turn on automatic line number handling at the top of next_token.

=== 2.0.0 / 2013-12-13
