@@ -1,7 +1,7 @@
 # encoding: UTF-8
 #--
 # This file is automatically generated. Do not modify it.
-# Generated by: oedipus_lex version 2.5.0.
+# Generated by: oedipus_lex version 2.5.1.
 # Source: lib/oedipus_lex.rex
 #++
 
@@ -65,11 +65,17 @@ class OedipusLex
   attr_accessor :old_pos
 
   ##
+  # The position of the start of the current line. Only available if the
+  # :column option is on.
+
+  attr_accessor :start_of_current_line_pos
+
+  ##
   # The current column. Only available if the :column option is on.
 
+  # we report columns starting at 0 
   def column
-    idx = ss.string.rindex("\n", old_pos) || -1
-    old_pos - idx - 1
+    old_pos - start_of_current_line_pos
   end
 
   ##
@@ -97,6 +103,7 @@ class OedipusLex
   def parse str
     self.ss     = scanner_class.new str
     self.lineno = 1
+    self.start_of_current_line_pos = 0
     self.state  ||= nil
 
     do_parse
@@ -131,7 +138,11 @@ class OedipusLex
     token = nil
 
     until ss.eos? or token do
-      self.lineno += 1 if ss.peek(1) == "\n"
+      if ss.peek(1) == "\n"
+        self.lineno += 1
+        # line starts 1 position after the newline
+        self.start_of_current_line_pos = ss.pos + 1
+      end
       self.old_pos = ss.pos
       token =
         case state
